wiki wiki images, add KBR gametype, Java updates