@@ -54,8 +54,8 @@ public class Skin extends Content {
 	public List<String> autoTags() {
 		List<String> tags = new ArrayList<>(super.autoTags());
 		tags.add(name.toLowerCase());
-		tags.addAll(skins.stream().map(String::toLowerCase).collect(Collectors.toList()));
-		tags.addAll(faces.stream().map(String::toLowerCase).collect(Collectors.toList()));
+		tags.addAll(skins.stream().map(String::toLowerCase).toList());
+		tags.addAll(faces.stream().map(String::toLowerCase).toList());
 		return tags;
 	}
 
